BUG#47754, used number of parts instead of number of list values as end part for list partitioning in column list partitioning